@@ -9,9 +9,8 @@ Xprt_CFLAGS = @SERVER_DEFINES@ @DIX_CFLAGS@ @XPRINT_CFLAGS@ \
 
 Xprt_LDFLAGS = -L$(top_srcdir)
 Xprt_LDADD = @XPRINT_LIBS@ ps/libps.la raster/libraster.la  \
-	pcl/libpcl.la pcl-mono/libpcl.la  \
-	../mfb/libmfb.la ../mi/libmi.la  \
-	../cfb32/libcfb32.la ../cfb/libcfb.la ../Xext/libXext.la \
+	pcl/libpcl.la pcl-mono/libpcl.la ../fb/libfb.la \
+	../render/librender.la ../mi/libmi.la ../Xext/libXext.la \
 	@FREETYPE_LIBS@
 
 miinitext-wrapper.c:
@@ -37,6 +36,7 @@ Xprt_SOURCES =			\
 	spooler.h		\
 	Util.c			\
 	miinitext-wrapper.c	\
-	dpmsstubs-wrapper.c
+	dpmsstubs-wrapper.c     \
+        $(top_srcdir)/fb/fbcmap.c
 
 EXTRA_DIST = ValTree.c
