@@ -1,5 +1,16 @@
 2006-04-03  Adam Jackson  <ajax@freedesktop.org>
 
+	* Xprint/Makefile.am:
+	* Xprint/pcl/PclArea.c:
+	* Xprint/pcl/PclColor.c:
+	* Xprint/pcl/PclGC.c:
+	* Xprint/pcl/PclInit.c:
+	* Xprint/ps/PsInit.c:
+	* Xprint/raster/Raster.c:
+	Bug #4766: Convert all Xprint drivers to fb.
+
+2006-04-03  Adam Jackson  <ajax@freedesktop.org>
+
 	* fb/fbfill.c:
 	* fb/fbwindow.c:
 	Bug #5478: More use of fbSOlidFillmmx.  (Jim Huang)
